src/objects/Product_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account_Bill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Bill</label>
        <referenceTo>Account_Bill__c</referenceTo>
        <relationshipLabel>Product Profiles</relationshipLabel>
        <relationshipName>Product_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Contact__r.Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Profiles</relationshipLabel>
        <relationshipName>Product_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Utility_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Utility Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Subscription__c</fullName>
        <label>Customer Subscription</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Payment__c</fullName>
        <label>Date of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Don_t_Adjust_Solar_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Adjust Solar Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Energy_Consumption__c</fullName>
        <label>Energy Consumption</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Energy_Credit__c</fullName>
        <label>Energy Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <formula>IF(ISPICKVAL(Profile_Type__c, &quot;Community Solar&quot;), &quot;/resource/Icons/Icons/CommunitySolar.png&quot;, &quot;/resource/Icons/Icons/Homeowners2.png&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Payment__c</fullName>
        <label>Interest Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_paid__c</fullName>
        <label>Interest paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Payment_Name__c</fullName>
        <label>Loan Payment Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MonthDate__c</fullName>
        <label>Month</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Current_Balance__c</fullName>
        <label>My Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Balance__c</fullName>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Paid__c</fullName>
        <label>Principal Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Payment__c</fullName>
        <label>Principal Payment</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Production_kWh__c</fullName>
        <label>Production (kWh)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile_Type__c</fullName>
        <label>Profile Type</label>
        <picklist>
            <picklistValues>
                <fullName>Community Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_View__c</fullName>
        <label>Project View</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Option__c</fullName>
        <label>SREC Option</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Savings__c</fullName>
        <label>Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shared_Solar_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared Solar System</label>
        <referenceTo>Shared_Solar_System__c</referenceTo>
        <relationshipLabel>Product Profiles</relationshipLabel>
        <relationshipName>Product_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Update__c</fullName>
        <label>System Update</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Account_Password__c</fullName>
        <label>Utility Account Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Account_Username__c</fullName>
        <label>Utility Account Username</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <label>Utility</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YearDate__c</fullName>
        <label>Year</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>o_Availability__c</fullName>
        <label>Availability</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <label>Product Profile</label>
    <nameField>
        <label>Product Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Profiles</pluralLabel>
    <recordTypes>
        <fullName>Community_Solar</fullName>
        <active>true</active>
        <label>Community Solar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solar_Loan</fullName>
        <active>true</active>
        <label>Solar Loan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>